tests/baselines/reference/contextualTyping5.errors.txt
tests/cases/compiler/contextualTyping5.ts(1,20): error TS2322: Type '{}' is not assignable to type '{ id: number; }'.
  Property 'id' is missing in type '{}'.


==== tests/cases/compiler/contextualTyping5.ts (1 errors) ====
    class foo { public bar:{id:number;} = { }; }
                       ~~~
!!! error TS2322: Type '{}' is not assignable to type '{ id: number; }'.
!!! error TS2322:   Property 'id' is missing in type '{}'.